@@ -545,6 +545,15 @@ stun all enemies of the druid.  The same will also happen in the rain. \
 However, under all other circumstances, the electrical discharge happens \
 too quickly to have any effect.\
 
+CHANT_ENCHANTSHARDS=CHANT_ENCHANT_SHARDS
+CHANT_ENCHANT_SHARDS=<ABILITY>\
+Usage    : CHANT "ENCHANT SHARDS" [CHANT NAME] [TARGET NAME] \n\r\
+Example  : chant "enchant shards" "" relic\n\r\
+This chant allows the druid to place any chant he or she knows onto an empty shard. \
+Once placed on the shard, the chant may be invoked off it using the command word. \
+Enchanting is very draining on the cleric however.  The cleric will lose some \
+experience points for using this chant.  Enchanting also requires that \
+the cleric be at full mana.
 
 CHANT_ENDURERUST=CHANT_ENDURE_RUST
 CHANT_ENDURE_RUST=<ABILITY>\
@@ -1326,6 +1335,31 @@ Usage    : CHANT "REABSORB" [TARGET NAME]\n\r\
 Example  : chant "reabsorb" sword\n\r\
 This chant causes the target item to be reabsorbed into the earth, returning \
 to the dust from which it came.
+
+CHANT_READRUNES=CHANT_READ_RUNES
+CHANTL_READ_RUNES=<ABILITY>\
+Usage    : CHANT "READ RUNES" [TARGET NAME] \n\r\
+Example  : chant "read runes" scroll\n\r\
+This chant is required in order to be able to invoke chants off of runic scrolls.  After \
+chanting read runes on a scroll, the scroll may be 'read' normally for the \
+purposes of invoking chants off of it. Seek help on the 'read' \
+command for more information on scroll use.
+
+CHANT_RECHARGESHARDS=CHANT_RECHARGE_SHARDS
+RECHARGE_SHARDS=CHANT_RECHARGE_SHARDS
+CHANT_RECHARGE_SHARDS=<ABILITY>\
+Usage    : CHANT "RECHARGE SHARDS" [TARGET NAME] \n\r\
+Example  : chant "recharge shard" statue\n\r\
+This chant allows the caster to recharge the magical properties of a magical \
+shard.  If a shard ceases to function due to overuse, this chant can make \
+the shard usable again.
+
+CHANT_REFRESHRUNES=CHANT_REFRESH_RUNES
+CHANT_REFRESH_RUNES=<ABILITY>\
+Usage    : CHANT "REFRESH RUNES" [TARGET NAME] \n\r\
+Example  : chant "refresh runes" scroll\n\r\
+When invoked on a runic scroll, the symbols on the paper \
+gain new clarity.  The scroll then may be re-used more often.
 
 CHANT_REDMOON=CHANT_RED_MOON
 CHANT_RED_MOON=<ABILITY>\
